src/css/main.css
html[global_enable="true"] #masthead-ad,
html[global_enable="true"] ytd-mealbar-promo-renderer,
html[global_enable="true"] ytd-carousel-ad-renderer,
html[global_enable="true"] .ytd-display-ad-renderer,
html[global_enable="true"] ytd-ad-slot-renderer,

/* General */
html[global_enable="true"][remove_all_shorts="true"] a[title="Shorts"],
html[global_enable="true"][remove_all_shorts="true"] *[is_short],
html[global_enable="true"][remove_all_shorts="true"] ytd-reel-shelf-renderer,
html[global_enable="true"][remove_video_thumbnails="true"] ytd-thumbnail,

/* Main */
html[global_enable="true"][remove_homepage="true"] ytd-browse[page-subtype="home"],
html[global_enable="true"][remove_sidebar="true"] #secondary > div.circle,
html[global_enable="true"][remove_sidebar="true"] #related,
html[global_enable="true"][remove_end_of_video="true"] .html5-endscreen,

/* Left Bar Navigation */
html[global_enable="true"][remove_home_link="true"] a:not(#logo)[href="/"],
html[global_enable="true"][remove_explore_link="true"] a[href="/feed/trending"],
html[global_enable="true"][remove_explore_link="true"] a[href="/feed/explore"],
html[global_enable="true"][remove_shorts_link="true"] a[title="Shorts"],
html[global_enable="true"][remove_shorts_link="true"] ytd-mini-guide-entry-renderer[aria-label="Shorts"],
html[global_enable="true"][remove_subscriptions_link="true"] a[href="/feed/subscriptions"],

/* Left Bar Navigation Sections */
html[global_enable="true"][remove_left_nav_bar="true"] tp-yt-app-drawer#guide,
html[global_enable="true"][remove_left_nav_bar="true"] ytd-mini-guide-renderer[role="navigation"],
html[global_enable="true"][remove_left_nav_bar="true"] yt-icon-button#guide-button,
html[global_enable="true"][remove_quick_links_section="true"] ytd-guide-collapsible-section-entry-renderer,
html[global_enable="true"][remove_sub_section="true"]     ytd-guide-section-renderer[rys_sub_section],
html[global_enable="true"][remove_explore_section="true"] ytd-guide-section-renderer[rys_explore_section],
html[global_enable="true"][remove_more_section="true"]    ytd-guide-section-renderer[rys_more_section],

/* Homepage */
html[global_enable="true"][remove_header="true"] ytd-browse[page-subtype="home"] ytd-rich-grid-renderer > div#header,
html[global_enable="true"][remove_all_but_one="true"] ytd-browse[page-subtype="home"] ytd-rich-grid-renderer > #contents > ytd-rich-grid-row:nth-child(n+2),
html[global_enable="true"][remove_all_but_one="true"] ytd-browse[page-subtype="home"] ytd-rich-grid-renderer > #contents > ytd-continuation-item-renderer,
html[global_enable="true"][remove_extra_rows="true"] ytd-browse[page-subtype="home"] ytd-rich-grid-renderer > #contents > ytd-rich-grid-row + ytd-rich-section-renderer,
html[global_enable="true"][remove_infinite_scroll="true"] ytd-browse[page-subtype="home"] ytd-rich-grid-renderer > #contents > ytd-continuation-item-renderer,

/* Video Player - UI*/
html[global_enable="true"][remove_entire_sidebar="true"] #secondary,
html[global_enable="true"][remove_play_next_button="true"] a.ytp-next-button,
html[global_enable="true"][remove_chat="true"] #chat,
html[global_enable="true"][remove_info_cards="true"] .ytp-ce-element.ytp-ce-element,
html[global_enable="true"][remove_menu_buttons="true"] #menu-container,
html[global_enable="true"][remove_menu_buttons="true"] #actions,
html[global_enable="true"][remove_embedded_more_videos="true"] div.ytp-pause-overlay,
html[global_enable="true"][remove_overlay_suggestions="true"] .ytp-cards-teaser,
html[global_enable="true"][remove_overlay_suggestions="true"] button.ytp-button.ytp-cards-button,

/* Video Player - Comments */
html[global_enable="true"][remove_comments="true"] #comments,
html[global_enable="true"][remove_comments="true"] #comment-teaser,
html[global_enable="true"][remove_comments="true"] ytd-engagement-panel-section-list-renderer[target-id="engagement-panel-comments-section"],
html[global_enable="true"][remove_non_timestamp_comments="true"] ytd-comment-thread-renderer:not([timestamp_comment]),
html[global_enable="true"][remove_comment_usernames="true"] #author-text,
html[global_enable="true"][remove_comment_profiles="true"] #author-thumbnail,
html[global_enable="true"][remove_comment_replies="true"] #replies.ytd-comment-thread-renderer,
html[global_enable="true"][remove_comment_upvotes="true"] #vote-count-middle.ytd-comment-action-buttons-renderer,

/* Search Results Page */
html[global_enable="true"][remove_search_suggestions="true"] div.sbdd_a,
html[global_enable="true"][remove_search_promoted="true"] #container.ytd-search ytd-search-pyv-renderer,
html[global_enable="true"][remove_shorts_results="true"] #container.ytd-search ytd-video-renderer[is_short="true"],
html[global_enable="true"][remove_shorts_results="true"] #container.ytd-search ytd-reel-shelf-renderer,
html[global_enable="true"][remove_extra_results="true"] #container.ytd-search ytd-shelf-renderer,
html[global_enable="true"][remove_thumbnail_mouseover_effect="true"] #mouseover-overlay,
html[global_enable="true"][remove_infinite_scroll_search="true"] .ytd-search #contents > ytd-continuation-item-renderer,

/* Subscriptions Page */
html[global_enable="true"][remove_sub_shorts="true"]   ytd-grid-video-renderer[is_sub_short],
html[global_enable="true"][remove_sub_live="true"]     ytd-grid-video-renderer[badge-text="live"],
html[global_enable="true"][remove_sub_upcoming="true"] ytd-grid-video-renderer[badge-text="upcoming"],
html[global_enable="true"][remove_sub_premiere="true"] ytd-grid-video-renderer[badge-text="premiere"],

html[global_enable="true"][foo=bar] {
	display: none !important;
}


/* Disable Youtube logo's link to the homepage */
html[global_enable="true"][remove_logo_link="true"] #logo[href="/"] {
  pointer-events: none;
}


/* Center contents when the left nav bar is entirely hidden */
html[global_enable="true"][remove_left_nav_bar="true"] ytd-app[guide-persistent-and-visible] ytd-page-manager.ytd-app,
html[global_enable="true"][remove_left_nav_bar="true"] ytd-app[mini-guide-visible] ytd-page-manager.ytd-app,
html[global_enable="true"][remove_left_nav_bar="true"] ytd-playlist-sidebar-renderer,
html[global_enable="true"][remove_left_nav_bar="true"] ytd-playlist-header-renderer,

html[global_enable="true"][foo=bar] {
	margin-left: 0px;
	left: 0;
}


/* Center contents when the sidebar is entirely hidden */
html[global_enable="true"][remove_entire_sidebar="true"] ytd-watch-flexy[flexy][is-two-columns_]:not([fullscreen]):not([theater]),
html[global_enable="true"][search_engine_mode="true"] ytd-watch-flexy[flexy][is-two-columns_]:not([fullscreen]):not([theater]),
html[foobar] {
	--ytd-watch-flexy-max-player-width: calc(var(--ytd-watch-flexy-chat-max-height)*var(--ytd-watch-flexy-width-ratio)/var(--ytd-watch-flexy-height-ratio)) !important;
}


/**********************
 * Search engine mode *
 **********************/

html[global_enable="true"][search_engine_mode="true"] *,
html[foobar] {
	visibility: hidden;
}

/* Search header container */
html[global_enable="true"][search_engine_mode="true"] #container.ytd-masthead,
/* YouTube logo container */
html[global_enable="true"][search_engine_mode="true"] ytd-topbar-logo-renderer,
html[global_enable="true"][search_engine_mode="true"] ytd-topbar-logo-renderer *,
/* Search bar container */
html[global_enable="true"][search_engine_mode="true"] #center.ytd-masthead,
html[global_enable="true"][search_engine_mode="true"] #center.ytd-masthead *,
/* Settings button */
html[global_enable="true"][search_engine_mode="true"] ytd-topbar-menu-button-renderer,
html[global_enable="true"][search_engine_mode="true"] ytd-topbar-menu-button-renderer *,
/* Settings popup menu */
html[global_enable="true"][search_engine_mode="true"] ytd-popup-container,
html[global_enable="true"][search_engine_mode="true"] ytd-popup-container *,
/* Search results */
html[global_enable="true"][search_engine_mode="true"] ytd-search,
html[global_enable="true"][search_engine_mode="true"] ytd-search *,
/* Video player */
html[global_enable="true"][search_engine_mode="true"] ytd-watch-flexy,
html[global_enable="true"][search_engine_mode="true"] ytd-watch-flexy *,

html[foo=bar] {
	visibility: visible;
}

/* Homepage */
html[global_enable="true"][search_engine_mode="true"] ytd-browse,
/* Channel search results */
html[global_enable="true"][search_engine_mode="true"] ytd-channel-renderer,
/* Thumbnails */
html[global_enable="true"][search_engine_mode="true"] ytd-thumbnail,
/* Next to video player */
html[global_enable="true"][search_engine_mode="true"] #secondary,
/* Below video player */
html[global_enable="true"][search_engine_mode="true"] #top-row,
/* Comments */
html[global_enable="true"][search_engine_mode="true"] #comments,
html[foobar] {
	display: none;
}

/* Search results */
html[global_enable="true"][search_engine_mode="true"] ytd-search,
html[foobar] {
	position: absolute;
	left: 0;
	width: 100vw;
	margin: 0;
	padding: 0;
}

html[global_enable="true"][search_engine_mode="true"] ytd-video-renderer,
html[foobar] {
	margin-top: 35px;
}

/* search header */
html[global_enable="true"][search_engine_mode="true"] #container.ytd-masthead {
	position: fixed;
	top: 0;
	left: 0;
	width: 100vw;
	margin: 0;
	padding: 0;

	background-color: var(--yt-spec-base-background);
}


/**********
 * Mobile *
 **********/

html[global_enable="true"] ytm-companion-ad-renderer,
html[global_enable="true"] ytm-promoted-sparkles-web-renderer,

/* Main */
html[global_enable="true"][remove_homepage="true"] .rich-grid-renderer-contents,
html[global_enable="true"][remove_sidebar="true"] ytm-item-section-renderer[section-identifier="related-items"],

/* Left Bar Navigation */
html[global_enable="true"][remove_home_link="true"] ytm-pivot-bar-item-renderer:nth-child(1),
html[global_enable="true"][remove_shorts_link="true"] ytm-pivot-bar-item-renderer:nth-child(2),
html[global_enable="true"][remove_explore_link="true"] ytm-chip-cloud-chip-renderer[chip-style="STYLE_EXPLORE_LAUNCHER_CHIP"],

/* Homepage */
html[global_enable="true"][remove_infinite_scroll="true"] div.rich-grid-renderer-contents > ytm-continuation-item-renderer,

/* Video Player */
html[global_enable="true"][remove_comments="true"] ytm-comments-entry-point-header-renderer,
html[global_enable="true"][remove_menu_buttons="true"] ytm-slim-video-action-bar-renderer,

/* Search Results Page */
html[global_enable="true"][remove_search_suggestions="true"] .searchbox-dropdown,
html[global_enable="true"][on_results_page="true"][remove_shorts_results="true"] ytd-video-renderer[is_short="true"],

html[global_enable="true"][foo=bar]

{

	display: none !important;

}

